# python-project-51

./: .coveragerc  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
page_loader/: cli.py  file_processor.py  network_processor.py  page_loader.py
page_loader/scripts/: page_loader_start.py
page_loader/tests/: test_exceptions.py  test_page_loader.py  test_page_loader_img.py  test_page_loader_items.py
page_loader/tests/fixtures/: empty_script.js  simple_link.html  simple_pic.html  simple_script.html  simple_text.html
src/: __init__.py  page_loader.py
src/scripts/: page_loader_start.py
src/tests/: test_exceptions.py  test_page_loader.py  test_page_loader_img.py  test_page_loader_items.py
src/tests/fixtures/: example_link.css  simple_items.html  simple_pic.html  simple_text.html
