[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI-tool for downloading web pages for local viewing"
authors = ["dmitriy-ga <Dmitriy2243@yandex.ru>"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Environment :: Console",
  "Topic :: Internet",
  "Topic :: Utilities"
]
packages = [{include = "page_loader"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "src.scripts.page_loader_start:main"